@@ -2,6 +2,11 @@
 
 === HEAD
 
+* New Features:
+
+  * An optional verb may be passed to Mechanize#get GH #26
+  * The WWW constant is deprecated
+
 * Bug Fixes:
 
   * Rescue errors from bogus encodings
